# dots

./: CMakeLists.txt  README.md  build.bat  build.sh
dots/: dots.c  dots.cbp  dots.depend  dots.h  dots.layout  econio.h  game.c  game.h  highscore.h  main.c  screen.c  settings.c  settings.h
inc/: dots.h  game.h  keys.h  port.h  screen.h
src/: game.c  highscore.c  main.c  port_linux.c  port_windows.c  screen.c  settings.c
